scrollbar transparent fixed

--- a/src/app/presentation-element/presentation-element.component.css
+++ b/src/app/presentation-element/presentation-element.component.css
@@ -77,19 +77,19 @@
     width: 100%;
     text-align: justify;
     word-wrap: break-word;
-    font-size: 2.2vh;
-    overflow: hidden;
+    font-size: 2.5vh;
+    overflow-y: auto;
     font-family: 'lato';
     color: white;
 }
-#requirements{
+#req {
     float: left;
     margin-top: 2vh;
     max-height: 8vh;
     width: 100%;
     text-align: justify;
     word-wrap: break-word;
-    font-size: 2.2vh;
+    font-size: 2.5vh;
     font-family: 'lato';
     overflow: hidden;
     color: white;
