--- a/src/app/social-side-bar/social-side-bar.component.css
+++ b/src/app/social-side-bar/social-side-bar.component.css
@@ -4,10 +4,10 @@
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     z-index: 3; /* Stay on top */
     top: 45vh; /* Stay at the top */
-    right: 0;
+    left: 0;
     background-color: white; /* Black */
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 20px;
 }
@@ -24,7 +24,7 @@
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     z-index: 1; /* Stay on top */
     top: 40vh; /* Stay at the top */
-    right: 0;
+    left: 0;
     background-color: white; /* Black */
     border-radius: 25px;
     overflow-x: hidden; /* Disable horizontal scroll */
